--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
 	"main": "index.js",
 	"license": "MIT",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"reflect-metadata": "^0.1.13",
 		"sqlite3": "^4.0.9",
 		"typeorm": "^0.2.18"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.5",
 		"@types/express": "^4.17.0",
 		"@types/node": "^12.6.2",
 		"typescript": "^3.5.3"
