--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
 	"name": "homewall",
 	"version": "0.1.0",
 	"private": true,
+	"proxy": "http://localhost:9000/",
 	"dependencies": {
 		"@types/jest": "24.0.15",
 		"@types/node": "12.6.2",
