--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
 	"main": "index.js",
 	"license": "MIT",
 	"dependencies": {
+		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"reflect-metadata": "^0.1.13",
@@ -11,6 +12,7 @@
 		"typeorm": "^0.2.18"
 	},
 	"devDependencies": {
+		"@types/compression": "^0.0.36",
 		"@types/cors": "^2.8.5",
 		"@types/express": "^4.17.0",
 		"@types/node": "^12.6.2",
