--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
 		"@types/node": "12.6.2",
 		"@types/react": "16.8.23",
 		"@types/react-dom": "16.8.4",
+		"@types/react-router": "^5.0.3",
+		"@types/react-router-dom": "^4.3.4",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-router-dom": "^5.0.1",
@@ -34,8 +36,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"devDependencies": {
-		"@types/react-router-dom": "^4.3.4"
 	}
 }
