--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,18 @@
 	"main": "index.js",
 	"license": "MIT",
 	"dependencies": {
-		"compression": "^1.7.4",
-		"cors": "^2.8.5",
-		"express": "^4.17.1",
-		"pg": "^7.11.0",
-		"reflect-metadata": "^0.1.13",
-		"sqlite3": "^4.0.9",
-		"typeorm": "^0.2.18"
-	},
-	"devDependencies": {
 		"@types/compression": "^0.0.36",
 		"@types/cors": "^2.8.5",
 		"@types/express": "^4.17.0",
 		"@types/node": "^12.6.2",
+		"compression": "^1.7.4",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"pg": "^7.11.0",
+		"pg-connection-string": "^2.1.0",
+		"reflect-metadata": "^0.1.13",
+		"sqlite3": "^4.0.9",
+		"typeorm": "^0.2.18",
 		"typescript": "^3.5.3"
 	},
 	"scripts": {
