--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,12 @@
 		"@types/compression": "^0.0.36",
 		"@types/cors": "^2.8.5",
 		"@types/express": "^4.17.0",
+		"@types/image-size": "^0.7.0",
 		"@types/node": "^12.6.2",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"image-size": "^0.7.4",
 		"pg": "^7.11.0",
 		"pg-connection-string": "^2.1.0",
 		"reflect-metadata": "^0.1.13",
