--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,17 @@
 		"@types/compression": "^0.0.36",
 		"@types/cors": "^2.8.5",
 		"@types/express": "^4.17.0",
+		"@types/express-enforces-ssl": "^1.1.1",
+		"@types/express-rate-limit": "^3.3.1",
+		"@types/helmet": "^0.0.43",
 		"@types/image-size": "^0.7.0",
 		"@types/node": "^12.6.2",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"express-enforces-ssl": "^1.1.0",
+		"express-rate-limit": "^5.0.0",
+		"helmet": "^3.19.0",
 		"image-size": "^0.7.4",
 		"pg": "^7.11.0",
 		"pg-connection-string": "^2.1.0",
