--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
 		"@types/helmet": "^0.0.43",
 		"@types/image-size": "^0.7.0",
 		"@types/node": "^12.6.2",
+		"argon2": "^0.24.0",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
