disable caching on index.html

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
 		"@types/helmet": "^0.0.43",
 		"@types/image-size": "^0.7.0",
 		"@types/node": "^12.6.2",
+		"@types/on-headers": "^1.0.0",
 		"argon2": "^0.24.0",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
@@ -20,6 +21,7 @@
 		"express-rate-limit": "^5.0.0",
 		"helmet": "^3.19.0",
 		"image-size": "^0.7.4",
+		"on-headers": "^1.0.2",
 		"pg": "^7.11.0",
 		"pg-connection-string": "^2.1.0",
 		"reflect-metadata": "^0.1.13",
