--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,15 @@
 		"@types/react": "16.8.23",
 		"@types/react-dom": "16.8.4",
 		"@types/react-router": "^5.0.3",
+		"@types/react-router-bootstrap": "^0.24.5",
 		"@types/react-router-dom": "^4.3.4",
 		"bootstrap": "^4.3.1",
+		"bootswatch": "^4.3.1",
+		"node-sass": "^4.12.0",
 		"react": "^16.8.6",
+		"react-bootstrap": "^1.0.0-beta.9",
 		"react-dom": "^16.8.6",
+		"react-router-bootstrap": "^0.25.0",
 		"react-router-dom": "^5.0.1",
 		"react-scripts": "3.0.1",
 		"typescript": "3.5.3"
